--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
     "eslint-plugin-github": "^4.8.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
