--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,11 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", ".next", "tailwind.config.js", "next.config.js", "postcss.config.js"]
+  "exclude": [
+    "node_modules",
+    ".next",
+    "tailwind.config.js",
+    "next.config.js",
+    "postcss.config.js"
+  ]
 }
