--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-github": "^4.8.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^4.16.0"
   }
 }
