--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "next": "13.4.6",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
