:sparkles: Created routing system + header components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@env/*": ["./env/*"],
+      "@articles/*": ["./articles/*"],
+      "@utils/*": ["./utils/*"],
+      "@components/*": ["./app/components/*"],
+      "@hooks/*": ["./app/hooks/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
