--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^47.0.0",
+    "framer-motion": "^10.12.17",
     "next": "13.4.6",
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.24",
